@@ -19,21 +19,9 @@
 
 . @LIB_DIR@/@SETUP_JAVA_FILE_NAME@
 
-
-ADD_OPENS_JAVA_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED \
-    --add-opens java.base/java.lang.invoke=ALL-UNNAMED \
-    --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
-    --add-opens java.base/java.io=ALL-UNNAMED \
-    --add-opens java.base/java.nio=ALL-UNNAMED \
-    --add-opens java.base/java.math=ALL-UNNAMED \
-    --add-opens java.base/java.util=ALL-UNNAMED \
-    --add-opens java.base/jdk.internal.misc=ALL-UNNAMED \
-    --add-opens java.base/jdk.internal.access=ALL-UNNAMED \
-    --add-opens java.base/sun.nio.ch=ALL-UNNAMED "
-
 # used by rpm, deb, zip and docker distributions
 export COMMON_JAVA_OPTS="
-    ${ADD_OPENS_JAVA_OPTS} \
+    @ADD_OPENS@ \
     -Dio.netty.tryReflectionSetAccessible=true \
     -Dfile.encoding=UTF-8 \
     -XX:+HeapDumpOnOutOfMemoryError \
